# abt

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  bash.exe.stackdump  improvements.md  pyproject.toml  real_life_case.md
.claude/: settings.local.json
abt/: cli.py  exceptions.py  project.py
abt/compiler/: __init__.py  cache_manager.py  cte_parser.py  factory.py  fingerprint.py  folder_parser.py  graph_builder.py  jinja_env.py  manifest_generator.py  prompt_compiler.py  schema_parser.py  selector.py  source_parser.py  trigger_parser.py
abt/models/: __init__.py  config.py  graph.py  node.py  prompt.py  schema.py  source.py  trigger.py
abt/runtime/: __init__.py  db.py  executor.py  mcp_client.py  node_runner.py  server.py  test_runner.py  tool_table.py  trigger_manager.py
example_project/: .env.example  abt_project.yml
example_project/prompts/: decide.prompt  decide.test.yml
example_project/prompts/require_all/: check_demand.prompt  check_demand.test.yml  (+2 more)
example_project/schemas/: inventory_schema.yml
example_project/sources/: apis.yml
example_project/triggers/: inventory.triggers.yml
examples/local_only/: abt_project.yml  tools.py
market_intel/: abt_project.yml  rss_fetcher.py  telegram_sender.py
market_intel/schemas/: briefing.yml
market_intel/sources/: news.yml
market_intel/triggers/: briefing.triggers.yml
tests/: test_blueprints.py  test_generated_python.py  test_golden_dsl.py  test_integration.py  test_local_only_example.py  test_nested_subgraphs.py  test_phase4_smoke.py  test_phase5_smoke.py  test_selectors.py  test_triggers.py
(+8 files in other folders)
