[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abt"
version = "0.1.0"
description = "Agent Building Tool — compile declarative prompts into LangGraph agents with SQLite persistence. Inspired by dbt."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ABT"}]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0,<0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.0",
]

[project.scripts]
abt = "abt.cli:cli"

[tool.setuptools.packages.find]
include = ["abt*"]
